# epub-shrink

./: .gitignore  GEMINI.md  README.md  TODO.md  epub-shrink.py  epub_min.py  epub_shrink.py  pyproject.toml  requirements.txt  spec.md
tests/: Songs.epub  test_aria_fix.py  test_cover_attribute_order.py  test_cover_image_id_renaming.py  test_custom_data_attributes.py  test_dynamic_quality.py  test_epubcheck_fixes.py  test_handle_deprecated_split.py  test_invalid_ids.py  test_media_type_standardization.py  test_missing_manifest_item.py  test_modernize_assets_split.py  test_no_expansion.py  test_reference_robustness.py  test_unregistered_uri_scheme.py
