
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-shrink"
version = "0.1.0"
description = "Shrink EPUB files by removing unused assets and compressing images"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tinycss2",
    "pillow",
    "fonttools",
    "tqdm",
]

[project.scripts]
epub-shrink = "epub-shrink:main"
