
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-shrink"
version = "0.1.0"
description = "Shrink EPUB files by removing unused assets and compressing images"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "tinycss2",
    "pillow",
    "fonttools",
    "tqdm",
    "pytest",
]

[project.scripts]
epub-shrink = "epub_shrink:main"
